--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -45,6 +46,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
     //Modern Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
@@ -68,6 +70,9 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil:2.2.2")
+
+    //Shimmer Layout
+    implementation "com.github.skydoves:androidveil:1.1.3"
 }
 kapt {
     correctErrorTypes true
